# matrufsc3

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
scraper/: Cargo.toml
scraper/src/: lib.rs  parse.rs
src/: export.rs
