[package]
name = "api"
version = "0.1.0"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
edition = "2018"
license = "GPL-2+"

[dependencies]
anyhow = "1.0.36"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
serde = "1.0.118"
scraper = { path = "../scraper" }
serde_cbor = "0.11.1"
warp = "0.2.5"
