[package]
name = "scraper"
version = "0.1.0"
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
edition = "2018"
license = "GPL-2+"

[dependencies]
anyhow = "1.0.36"
thiserror = "1.0.23"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
futures = "0.3.8"
reqwest = { version = "0.10.9", features = ["cookies"] }
select = "0.5.0"
serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
